--- a/1-Header/index.html
+++ b/1-Header/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Header</title>
 </head>
 <body>
-    
+    <div class="top">
+        <div class="logo-container">
+            <img id="logo" src="images/output-onlinepngtools.png" alt="logo">
+        </div>
+        
+        <div class="login-btns">
+            <button class="header-btns" type="button">Login</button>
+            <button class="header-btns" type="button">Sign Up</button>
+        </div>
+    </div>
 </body>
 </html>
