--- a/3-Home/index.html
+++ b/3-Home/index.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scss">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">">
     <title>Home</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="w-75h-75">
+            <div class="carousal-slide" id="carousalExample" data-ride="carousal">
+                <div class="carousal-inner">
+                    <div class="carousal-item active">
+                        <img src="images/sigiriya-459197_1920.jpg" alt="First Slide" class="d-block">
+                    </div>
+                    <div class="carousal-item">
+                        <img src="images/25.jpg" alt="Second Slide" class="d-block">
+                    </div>
 
+                    <div class="carousal-item">
+                        <img src="images/nine-arch-bridge-demodara-sri-lanka.jpg" alt="Third Slide" class="d-block">
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 </html>
