--- a/3-Home/index.html
+++ b/3-Home/index.html
@@ -8,28 +8,24 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="container">
-        <div class="w-75h-75">
-            <div class="carousal-slide" id="carousalExample" data-ride="carousal">
-                <div class="carousal-inner">
-                    <div class="carousal-item active">
-                        <img src="images/sigiriya-459197_1920.jpg" alt="First Slide" class="d-block">
-                    </div>
-                    <div class="carousal-item">
-                        <img src="images/25.jpg" alt="Second Slide" class="d-block">
-                    </div>
+    <div class="left-arrow">
 
-                    <div class="carousal-item">
-                        <img src="images/nine-arch-bridge-demodara-sri-lanka.jpg" alt="Third Slide" class="d-block">
-                    </div>
-
-                </div>
-            </div>
-        </div>
     </div>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="first-pic">
+
+    </div>
+
+    <div class="secnd-pic">
+
+    </div>
+
+    <div class="third-pic">
+
+    </div>
+    
+    <div class="right-arrow">
+
+    </div>
 </body>
 </html>
