--- a/3-Home/index.html
+++ b/3-Home/index.html
@@ -4,28 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Home</title>
 </head>
 <body>
-    <div class="left-arrow">
-        
+    <div class="horizontal-scroll">
+        <img class="left-arrow" src="images/211689_left_arrow_icon.png" alt="scroll-left">
+
+        <img class="first-pic" style="width: 400px;height:auto" src="images/25.jpg" alt="first-pic">
+
+        <img class="secnd-pic" style="width: 400px;height:auto" src="images/new.jpg" alt="nine-arch">
+
+        <img class="third-pic" style="width: 400px;height:auto" src="images/sigiriya-459197_1920.jpg" alt="sigiriya">
+
+        <img class="right-arrow" src="images/211607_right_arrow_icon.png" alt="right-arrow">
     </div>
-
-    <div class="first-pic">
-
-    </div>
-
-    <div class="secnd-pic">
-
-    </div>
-
-    <div class="third-pic">
-
-    </div>
-
-    <div class="right-arrow">
-
-    </div>
+    
 </body>
 </html>
