--- a/3-Home/index.html
+++ b/3-Home/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="white-space">
-        <h1 id="title" >Discover popular destinations across Sri Lanka!</h1>
+        <div class="typed-out">
+            <h1 id="title" >Discover popular destinations across Sri Lanka!</h1>
+        </div>        
     </div>
     <div class="horizontal-scroll" style="display:flex; flex-direction: row; justify-content: center; align-items: center">
         <img class="left-arrow" src="images/211689_left_arrow_icon.png" alt="scroll-left">
