--- a/3-Home/index.html
+++ b/3-Home/index.html
@@ -28,6 +28,8 @@
     
     <hr class="divider">
 
+    <h1 id="title" >Select what you want to search!</h1>
+
     <div class="user-btns" style="display:flex; flex-direction: row; justify-content: center; align-items: center">
         <button id="btn-1" class="btns">
             <span class="button__icon">
